--- a/src/components/video_detail/video_detail.module.css
+++ b/src/components/video_detail/video_detail.module.css
@@ -1,7 +1,68 @@
 .detail {
-    padding: 0.2em;
+  padding: 0.2em;
+  padding-right: 1em;
 }
 
 .description {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
+  color: white;
+  padding-left: 4.7em;
+}
+
+.tag {
+  margin-bottom: 0;
+  font-size: 12px;
+  color: #367af0;
+}
+
+.title {
+  margin-top: 0;
+  color: white;
+  font-size: 21px;
+  font-weight: 400;
+  border-bottom: 1px solid var(--gray-text);
+  padding-bottom: 18px;
+}
+
+.channel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.channelTitle {
+  color: white;
+}
+
+.channelInfo {
+  display: flex;
+  align-items: center;
+  gap: 0.7em;
+}
+
+.channelImg {
+  width: 50px;
+  height: 50px;
+  background: white;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 50px;
+  font-weight: 900;
+}
+
+.subscriber {
+    color: var(--gray-text);
+    font-size: 13px;
+}
+
+.subscribeBtn {
+  width: 60px;
+  height: 35px;
+  color: white;
+  background-color: rgb(204, 1, 1);
+  border: none;
+  border-radius: 3px;
+  font-weight: 500;
+  line-height: 35px;
+  cursor: pointer;
 }
