--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,24 +1,48 @@
+:root{
+    --gray-text: #aaa;
+}
+
 .container {
-    padding: 0.2em;
+    padding: 0.5em;
+    padding-bottom: 3em;
 }
 
 .container.grid {
-    width: 50%;
+    width: 20%;
 }
 
 .container.list {
     width: 100%;
+    padding-bottom: 1em;
 }
 
-.video {
+.video.column {
     width: 100%;
-    height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     cursor: pointer;
     transition: transform 250ms ease-in;
-    border: 1px solid lightgray;
-    box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.53);
+    /* border: 1px solid lightgray;
+    box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.53); */
+}
+
+.video.row {
+    width: 100%;
+    display: flex;
+    cursor: pointer;
+    transition: transform 250ms ease-in;
+    flex-direction: row;
+}
+.video.row .thumbnail{
+    width: 50%;
+}
+
+.video.row .metadata {
+    margin-left: 0.9em;
+}
+
+.video.row .metadata .title{
+    padding-bottom: 0.4em;
 }
 
 .video:hover {
@@ -26,20 +50,25 @@
 }
 
 .thumbnail {
-    width: 40%;
+    width: 100%;
     height: 100%;
+    padding-bottom: 0.4em;
 }
 
 .metadata {
     margin-left: 0.2em;
 }
 
+.title {
+    color: white;
+}
+
+.channel {
+    color: var(--gray-text);
+}
+
 .title,
 .channel {
     margin: 0;
     font-size: 0.8rem;
-}
-
-.channel {
-    font-size: 0.3rem;
 }
