add detail info

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -11,14 +11,14 @@ body {
 }
 
 .nav {
-  padding: 2em 0;
   width: 15em;
-  background-color: #212121
+  background-color: #212121;
+  padding-right: 1em;
 }
 
 .list {
   flex: 1 1 30%;
-  padding: 2em;
+  padding: 0.5em 1em;
 }
 
 /* 780 */
