--- a/src/components/search_header/search_header.module.css
+++ b/src/components/search_header/search_header.module.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     height: 4rem;
     padding: 0.8em 1em;
-    background: black;
+    background: #212121;
     color: white;
 }
 
